Modified project settings

--- a/project.config
+++ b/project.config
@@ -1,2 +1,7 @@
 [access]
 	inheritFrom = Public-Plugins
+[project]
+	description = The events plugin adds a stream events API which parallels\n\
+the core stream events API with extensions to resume events\n\
+"on reconnect.  Currently it only stores events in memory,"\n\
+eventually it will store them as files.
