--- a/project.config
+++ b/project.config
@@ -5,3 +5,5 @@
 the core stream events API with extensions to resume events\n\
 "on reconnect.  Currently it only stores events in memory,"\n\
 eventually it will store them as files.
+[access "refs/heads/master"]
+	delete = group google/gerritcodereview-maintainers@googlegroups.com
