build with 2.15-SNAPSHOT
Change-Id: Iaa9d29baa284436f074cf4dd1acd96ee7f05b795

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@ limitations under the License.
   <artifactId>events</artifactId>
   <name>events</name>
   <packaging>jar</packaging>
-  <version>2.14</version>
+  <version>2.15-SNAPSHOT</version>
 
   <properties>
     <Gerrit-ApiType>plugin</Gerrit-ApiType>
