Modified project settings

--- a/project.config
+++ b/project.config
@@ -3,7 +3,6 @@
 [project]
 	description = The events plugin adds a stream events API which parallels\n\
 the core stream events API with extensions to resume events\n\
-"on reconnect.  Currently it only stores events in memory,"\n\
-eventually it will store them as files.
+"on reconnect.  Each event is stored in a separate file in a traditional filesystem.  This plugin is multi-master friendly when the filesystem is shared among the masters."
 [access "refs/heads/master"]
 	delete = group google/gerritcodereview-maintainers@googlegroups.com
