events: Enable compile-time warnings as errors
Also fix issues reported by SonarQube and other small nits.

Change-Id: I4f4a12302d5907b5a65bf38a67dd186195517f76

--- a/pom.xml
+++ b/pom.xml
@@ -64,8 +64,11 @@ limitations under the License.
           <target>1.7</target>
           <encoding>UTF-8</encoding>
           <fork>true</fork>
+          <showWarnings>true</showWarnings>
           <compilerArgs>
             <arg>-XX:MaxPermSize=256m</arg>
+            <arg>-Werror</arg>
+            <arg>-Xlint:all</arg>
           </compilerArgs>
         </configuration>
       </plugin>
