Review access change
Change-Id: Ic4871d6c37159c22d6804175495de93a6dfdcc32

--- a/project.config
+++ b/project.config
@@ -1,8 +1,6 @@
 [access]
 	inheritFrom = Public-Plugins
 [project]
-	description = The events plugin adds a stream events API which parallels\n\
-the core stream events API with extensions to resume events\n\
-"on reconnect.  Each event is stored in a separate file in a traditional filesystem.  This plugin is multi-master friendly when the filesystem is shared among the masters."
-[access "refs/heads/master"]
-	delete = group google/gerritcodereview-maintainers@googlegroups.com
+	description = The events plugin adds a stream events API which parallels\nthe core stream events API with extensions to resume events\non reconnect.  Each event is stored in a separate file in a traditional filesystem.  This plugin is multi-master friendly when the filesystem is shared among the masters.
+[access "refs/*"]
+	owner = group Code Aurora Plugin Owners
