Add ability to drop events by classname
Introduce the plugin.events.filter key which can be used to drop events
by fully qualified classname before they are stored or sent to clients
using the following syntax:

 DROP classname fully.qualified.java.classname

Also add tests to confirm that the filtering works.

Change-Id: Ic10f8c9b98f77d48c51d4ba082b96dff67782ec0

--- a/test/docker/docker-compose.yaml
+++ b/test/docker/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
     volumes:
       - "../../:/events:ro"
       - "gerrit-site-etc:/server-ssh-key:ro"
+      - "gerrit-site-etc:/gerrit.config"
     depends_on:
       - gerrit-01
     environment:
