--- a/test/docker/gerrit/Dockerfile
+++ b/test/docker/gerrit/Dockerfile
@@ -1,4 +1,4 @@
-FROM gerritcodereview/gerrit:3.10.0-ubuntu22
+FROM gerritcodereview/gerrit:3.11.0-ubuntu24
 
 ENV GERRIT_SITE /var/gerrit
 COPY artifacts/plugins/ $GERRIT_SITE/plugins/
@@ -7,6 +7,7 @@ USER root
 COPY artifacts/bin/ /tmp/
 RUN { [ -e /tmp/gerrit.war ] && cp /tmp/gerrit.war "$GERRIT_SITE/bin/gerrit.war" ; } || true
 COPY start.sh /
+RUN touch "$GERRIT_SITE"/.firstTimeRedirect
 
 USER gerrit
 ENTRYPOINT /start.sh
