Use new gerrit_java_setup rule from bazlets
This allows standalone builds to leverage an error prone config copied
from core.

bazlets update includes:
$ git log --no-merges --oneline e3a8273.. | cat
b1d205a Add a new rule for setting up java toolchains
7ed3925 Add `load()` statements for the builtin java rules & symbols

Change-Id: I798c35c370f32402b6eec9a7e9c7fe7b91ff61c7

--- a/tools/BUILD
+++ b/tools/BUILD
@@ -1,1 +1,6 @@
-# Empty file - bazel treat directories with BUILD file as a package
+load(
+    "@com_googlesource_gerrit_bazlets//:gerrit_java_setup.bzl",
+    "gerrit_java_setup",
+)
+
+gerrit_java_setup(["//..."])
